--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
                     <input type="email" class="form-control bg-danger-subtle" name="email" placeholder="email@teste.com.br" id="email" />
                 </div>
                 <div class="mb-2">
-                    <textarea class="bg-danger-subtle" name="text" id="" cols="110" rows="3" placeholder="Deixe sua mensagem:"></textarea>
+                    <textarea class="bg-danger-subtle" name="text" id="" cols="132" rows="3" placeholder="Deixe sua mensagem:"></textarea>
                 </div>
-    </section>
+                <button class="btn btn-danger">Enviar</button>
+
+            </section>
     <footer class="container bg-black">
         <p class="text-center">Desenvolvido por Andréa Leite - &copy;2023</p>
     </footer>
